# AutoEncoder

./: CMakeLists.txt  LICENSE  README.md  README.txt
data/: model.json  test.encode  test.encode.hidden
src/: de_auto_encoder.cc  de_auto_encoder.h  interface.cc  interface.h  utils.cc  utils.h
test/: main.cc  settings.h  test_auto_encoder.cc  test_utils.cc
